--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name":"sasezaki/backbeard",
+    "description":"yet another DSLish minimum oriented framework for PHP",
+    "license": "BSD-3-Clause",
     "require": {
         "zendframework/zend-http": "2.*",
         "zendframework/zend-stdlib": "2.*",
