--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 
-before_script: composer install --dev
+before_script:
+  - composer self-update
+  - composer install
 
 php:
   - 5.5
