--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         "zendframework/zend-mvc": "2.*",
         "phly/mustache": "1.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7",
+        "satooshi/php-coveralls": "~0.6"
+    },
     "autoload": {
         "psr-4":{
             "Backbeard\\":"src/"
