--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
     "name":"sasezaki/backbeard",
     "description":"yet another DSLish minimum oriented framework for PHP",
     "license": "BSD-3-Clause",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://packages.zendframework.com/"
+        }
+    ],
     "require": {
         "zendframework/zend-http": "2.*",
         "zendframework/zend-stdlib": "2.*",
