--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "zendframework/zend-stdlib": "2.*",
         "zendframework/zend-servicemanager": "2.*",
         "zendframework/zend-mvc": "2.*",
-        "phly/mustache": "1.*"
+        "zendframework/zend-view": "2.*",
+        "zendframework/zend-filter": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7",
