--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: php
 
 before_script:
   - composer self-update
-  - composer install
+  - composer install --prefer-source
 
 php:
   - 5.5
+  - 5.6
 
 script:
   - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
