--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,15 @@ before_script:
 php:
   - 5.5
   - 5.6
+  - hhvm
 
 script:
   - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
 
 after_script:
   - php vendor/bin/coveralls -v
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: hhvm
