--- a/composer.json
+++ b/composer.json
@@ -19,20 +19,23 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "zendframework/zend-http": "2.*",
-        "zendframework/zend-stdlib": "2.*",
-        "zendframework/zend-servicemanager": "2.*",
-        "zendframework/zend-mvc": "2.*",
-        "zendframework/zend-view": "2.*",
-        "zendframework/zend-filter": "2.*"
+        "psr/http-message": "~0.11",
+        "nikic/fast-route": "~0.3",
+        "struggle-for-php/sfp-stream-view": "~0.0.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7",
+        "phpunit/phpunit": "~4.4",
+        "phly/http": "dev-master",
         "satooshi/php-coveralls": "~0.6"
     },
     "autoload": {
         "psr-4":{
-            "Backbeard\\":"src/"
+            "Backbeard\\":"src/Backbeard"
+        }
+    },    
+    "autoload-dev": {
+        "psr-4":{
+            "BackbeardTest\\":"tests"
         }
     }
 }
