--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,13 @@
     "name":"sasezaki/backbeard",
     "description":"yet another DSLish minimum oriented framework for PHP",
     "license": "BSD-3-Clause",
-    "keywords": ["microframework", "zf2"],
+    "keywords": ["microframework", "psr7"],
     "authors": [
         {
             "name": "sasezaki",
             "email": "sasezaki@gmail.com",
             "homepage": "http://github.com/sasezaki",
             "role": "Developer"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://packages.zendframework.com/"
         }
     ],
     "require": {
