--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "psr/http-message": "~0.10",
+        "psr/http-message": "~1.0",
         "nikic/fast-route": "~0.3",        
-        "phly/http": "dev-master",
+        "zendframework/zend-diactoros": "~1.0",
         "struggle-for-php/sfp-stream-view": "~0.0.2"
     },
     "require-dev": {
