--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name":"sasezaki/backbeard",
     "description":"yet another DSLish minimum oriented framework for PHP",
     "license": "BSD-3-Clause",
+    "keywords": ["router", "psr-7", "psr7"],
     "authors": [
         {
             "name": "sasezaki",
