--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "psr/http-message": "~1.0",
-        "nikic/fast-route": "~0.3",        
+        "psr/http-message": "^1.0.0",
+        "nikic/fast-route": "^0.6",        
         "zendframework/zend-diactoros": "~1.0",
-        "struggle-for-php/sfp-stream-view": "~0.0.2"
+        "struggle-for-php/sfp-stream-view": "^0.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
