--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "php": ">=5.5.0",
         "psr/http-message": "^1.0.0",
         "nikic/fast-route": "^0.6",        
-        "zendframework/zend-diactoros": "~1.0",
-        "struggle-for-php/sfp-stream-view": "^0.0.2"
+        "zendframework/zend-diactoros": "^1.1",
+        "struggle-for-php/sfp-stream-view": "^0.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.4",
+        "phpunit/phpunit": "~4.6",
         "satooshi/php-coveralls": "~0.6"
     },
     "autoload": {
