--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,16 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=7.2.0",
         "psr/http-message": "^1.0.0",
         "nikic/fast-route": "^0.6",        
-        "struggle-for-php/sfp-stream-view": "^0.1.0"
+        "struggle-for-php/sfp-stream-view": "^0.1.0",
+        "psr/http-factory": "^1.0"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "^1.1",
-        "phpunit/phpunit": "~4.6",
-        "satooshi/php-coveralls": "~0.6"
+        "zendframework/zend-diactoros": "^2",
+        "phpunit/phpunit": "^7",
+        "zendframework/zend-coding-standard": "~1.0.0"
     },
     "autoload": {
         "psr-4":{
@@ -31,5 +32,9 @@
         "psr-4":{
             "BackbeardTest\\":"tests"
         }
+    },
+    "scripts": {
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf"
     }
 }
