--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
-    "name":"sasezaki/backbeard",
-    "description":"yet another DSLish minimum oriented framework for PHP",
+    "name": "sasezaki/backbeard",
+    "description": "yet another DSLish minimum oriented framework for PHP",
     "license": "BSD-3-Clause",
-    "keywords": ["router", "psr-7", "psr7"],
+    "keywords": [
+        "router",
+        "psr-7",
+        "psr7"
+    ],
     "authors": [
         {
             "name": "sasezaki",
@@ -19,18 +23,18 @@
         "psr/http-factory": "^1.0"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "^2",
+        "laminas/laminas-diactoros": "^2",
         "phpunit/phpunit": "^9",
-        "zendframework/zend-coding-standard": "~1.0.0"
+        "laminas/laminas-coding-standard": "~1.0.0"
     },
     "autoload": {
-        "psr-4":{
-            "Backbeard\\":"src/Backbeard"
+        "psr-4": {
+            "Backbeard\\": "src/Backbeard"
         }
-    },    
+    },
     "autoload-dev": {
-        "psr-4":{
-            "BackbeardTest\\":"tests"
+        "psr-4": {
+            "BackbeardTest\\": "tests"
         }
     },
     "scripts": {
