--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require-dev": {
         "laminas/laminas-diactoros": "^2",
         "phpunit/phpunit": "^9",
-        "laminas/laminas-coding-standard": "~1.0.0"
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "phpstan/phpstan": "^0.12.29"
     },
     "autoload": {
         "psr-4": {
