--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
