change to psalm

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "phpunit/phpunit": "^9",
         "laminas/laminas-coding-standard": "~1.0.0",
         "phpstan/phpstan": "^0.12.29",
-        "phpstan/phpstan-phpunit": "^0.12.11"
+        "phpstan/phpstan-phpunit": "^0.12.11",
+        "vimeo/psalm": "^3.11"
     },
     "autoload": {
         "psr-4": {
